# geonodectl

./: .gitignore  .pre-commit-config.yaml  README.md  agents.md  geonodectl  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build-docs-on-release.yml  create-release-on-version-change.yml  publish-to-pypi.yml  python-black.yaml  python-check.yaml  python-flake8.yaml  python-mypy.yaml  python-unittest-on-pr.yml  python-unittest.yml
docs/: example.md  index.md  requirements.txt
geonoderest/: apiconf.py  cmdprint.py  datasets.py  documents.py  executionrequest.py  geonodeobject.py  geonodetypes.py  keywords.py  maps.py  people.py  rest.py  users.py
json-examples/: attributes.json  contact_roles.json  funders.json  keywords.json  license.json  patch.json  related_identifier.json  relatedprojects.json  simple-map.json  tkeywords.json
src/: cmdprint.py  datasets.py  documents.py  executionrequest.py  geoapps.py  geonodeobject.py  geonodetypes.py  maps.py  people.py  resources.py  rest.py  uploads.py
src/client/: cli.py
src/geonoderest/: apiconf.py  attributes.py  cmdprint.py  datasets.py  documents.py  exceptions.py  executionrequest.py  geoapps.py  geonodectl.py  geonodeobject.py  geonodetypes.py  groups.py  keywords.py  linkedresources.py  maps.py  permissions.py  resources.py  rest.py  tkeywordlabels.py  tkeywords.py  uploads.py  userinfo.py  users.py  wms.py
src2/geonoderest/: attributes_handler.py  capabilities.py  cmdprint.py  datasets_handler.py  documents_handler.py  geoapps_handler.py  (+12 more)
tests/: test_apiconf.py  test_attributes.py  test_datasets.py  test_documents.py  test_geoapps.py  test_geonodeobject.py  test_groups.py  test_linkedresources.py  test_maps.py  test_resources.py  test_rest.py
(+1 files in other folders)
