
[build-system]
requires = [
      "setuptools>=61.0.0",
      "wheel",
    ]
build-backend = "setuptools.build_meta"

[project]
name = 'geonodectl'
version="0.3.2"
description="a commandline interface tool for Geonode Rest API v2"
authors = [{ name = "marcel wallschlaeger", email="marcel.wallschlaeger@zalf.de" }]
readme = "README.md"
requires-python = '>=3.8'
dependencies = [
    "requests==2.32.4",
    "types-requests==2.32.0.20241016",
    "tabulate==0.9.0",
    "types-tabulate==0.9.0.20240106",
    "types-urllib3==1.26.25.14",
]

[project.optional-dependencies]
test = [
    "pre_commit==4.3.0",
    "flake8==7.0.0",
    "black==24.4.1",
    "mypy==1.10.0"
]

[project.urls]
repository = "https://github.com/GeoNodeUserGroup-DE/geonodectl/"

[project.scripts]
geonodectl = "geonoderest.geonodectl:geonodectl"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/geonoderest/",

]
